js/js.translator/testData/incremental/invalidation/companionConstVal/lib2/inlineFunction.4.kt
inline fun inlineFunction(): String {
    return "4"
}
